EZP-28936/EZP-29000/EZP-29001/EZP-29002/EZP-29003/EZP-29004/EZP-29005/EZP-29007 - Content on the Fly configuration

--- a/src/modules/universal-discovery/components/content-creator/css/content.creator.component.css
+++ b/src/modules/universal-discovery/components/content-creator/css/content.creator.component.css
@@ -5,7 +5,8 @@
 }
 
 .c-content-creator .m-ud__content {
-    padding: 0
+    padding: 0;
+    background: #eee;
 }
 
 .c-content-creator .m-ud__actions {
