--- a/src/modules/universal-discovery/components/bookmarks/css/bookmarks.component.css
+++ b/src/modules/universal-discovery/components/bookmarks/css/bookmarks.component.css
@@ -3,3 +3,18 @@
     overflow: auto;
     padding-top: 8px;
 }
+
+.c-bookmarks__no-bookmarks-info {
+    padding-top: 15px;
+    padding-left: 20px;
+    font-size: 25px;
+    color: #a6a6a6;
+}
+
+.c-bookmarks__loading-spinner {
+    width: 100%;
+    height: 50px;
+    min-width: 50px;
+    margin: 0 auto;
+    margin-top: 15px;
+}
