--- a/src/modules/universal-discovery/components/content-table/css/content.table.component.css
+++ b/src/modules/universal-discovery/components/content-table/css/content.table.component.css
@@ -39,10 +39,10 @@
     flex: 0 0 90px;
 }
 
-.c-content-table__no-items {
-    padding-top: 7px;
-    padding-left: 39px;
-    font-style: italic;
-    font-size: 17px;
-    color: #878787;
+.c-content-table__loading-spinner {
+    width: 100%;
+    height: 50px;
+    min-width: 50px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
