--- a/src/modules/universal-discovery/components/search/css/search.component.css
+++ b/src/modules/universal-discovery/components/search/css/search.component.css
@@ -14,14 +14,14 @@
 }
 
 .c-search__input {
-    border: 1px solid rgba(51,51,51,.3);
+    border: 1px solid rgba(51, 51, 51, 0.3);
     border-right: 0 none;
     border-radius: 4px 0 0 4px;
     background-color: #fff;
     line-height: 30px;
     padding: 0 8px;
     min-width: 300px;
-    transition: border .3s cubic-bezier(.25, .8, .25, 1);
+    transition: border 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
 .c-search__submit {
@@ -35,10 +35,27 @@
     align-items: center;
     min-width: 100px;
     text-align: center;
+    transition: opacity 0.3s cubic-bezier(0.25, 0.8, 0.25, 1), background 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    cursor: pointer;
+}
+
+.c-search__submit:hover,
+.c-search__submit:focus {
+    background: #ce4b0c;
+}
+
+.c-search__submit[disabled] {
+    opacity: 0.75;
 }
 
 .c-search__submit--loading {
     justify-content: center;
+    opacity: 0.75;
+}
+
+.c-search__submit--loading:hover,
+.c-search__submit--loading:focus {
+    background: #f15a10;
 }
 
 .c-search__submit:focus {
