EZP-29401: Incorrect selection color while creating content in the Universal Discovery

--- a/src/modules/universal-discovery/components/create/css/choose.content.type.component.css
+++ b/src/modules/universal-discovery/components/create/css/choose.content.type.component.css
@@ -34,6 +34,7 @@
 
 .c-choose-content-type__group-item.is-selected {
     background-color: #2b84b1;
+    color: #fff;
 }
 
 .c-choose-content-type__group-item.is-not-selectable {
