EZP-29424: Add darker background in Confirmed items component in UDW

--- a/src/modules/universal-discovery/components/selected-content/css/selected.content.component.css
+++ b/src/modules/universal-discovery/components/selected-content/css/selected.content.component.css
@@ -7,6 +7,7 @@
     padding: 5px;
     display: inline-block;
     border-radius: 4px;
+    background-color: #e3e3e3;
 }
 
 .c-selected-content__info--any-item-selected {
