--- a/src/modules/universal-discovery/components/content-meta-preview/css/content.meta.preview.component.css
+++ b/src/modules/universal-discovery/components/content-meta-preview/css/content.meta.preview.component.css
@@ -62,34 +62,6 @@
     margin: auto;
 }
 
-.c-meta-preview__btn-wrapper {
-    text-align: center;
-    margin: 16px 0;
-}
-
-.c-meta-preview__btn--select {
-    padding: 8px;
-    font-size: 16px;
-    border-radius: 4px;
-    width: 100%;
-    display: block;
-    background: #106d95;
-    color: #fff;
-    cursor: pointer;
-    transition: background 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-}
-
-.c-meta-preview__btn--select[disabled] {
-    cursor: not-allowed;
-    background: #e6e6e6;
-    color: #333;
-}
-
-.c-meta-preview__btn--select:not([disabled]):hover,
-.c-meta-preview__btn--select:not([disabled]):focus {
-    background: #00476f;
-}
-
 .c-meta-preview__icon {
     width: 16px;
     height: 16px;
@@ -174,10 +146,8 @@
     }
     50% {
         transform: scale(0.75);
-        box-shadow: inset 10px 10px 10px 4px rgb(237, 237, 237, 0.1)
-            inset -10px -10px 10px 4px rgba(237, 237, 237, 0.1),
-            inset 10px -10px 10px 4px rgba(237, 237, 237, 0.1),
-            inset -10px 10px 10px 4px rgba(237, 237, 237, 0.1);
+        box-shadow: inset 10px 10px 10px 4px rgb(237, 237, 237, 0.1) inset -10px -10px 10px 4px rgba(237, 237, 237, 0.1),
+            inset 10px -10px 10px 4px rgba(237, 237, 237, 0.1), inset -10px 10px 10px 4px rgba(237, 237, 237, 0.1);
         background-color: rgba(237, 237, 237, 0.1);
     }
     100% {
