--- a/src/modules/universal-discovery/components/content-table/css/content.table.item.component.css
+++ b/src/modules/universal-discovery/components/content-table/css/content.table.item.component.css
@@ -62,3 +62,10 @@
 .c-content-table-item__btn--preview:focus .ez-icon {
     fill: #565e63;
 }
+
+.c-content-table-item .c-select-content-button {
+    position: absolute;
+    right: 1.3rem;
+    top: 50%;
+    transform: translateY(-50%);
+}
