--- a/src/modules/universal-discovery/components/finder/css/finder.tree.leaf.component.css
+++ b/src/modules/universal-discovery/components/finder/css/finder.tree.leaf.component.css
@@ -80,6 +80,10 @@
 .c-finder-tree-leaf .c-select-content-button {
     display: none;
     padding: 2px;
+    position: absolute;
+    right: 1.3rem;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .c-finder-tree-leaf:hover .c-select-content-button,
