--- a/src/modules/universal-discovery/components/content-table/css/content.table.item.component.css
+++ b/src/modules/universal-discovery/components/content-table/css/content.table.item.component.css
@@ -2,6 +2,12 @@
     flex: 1 1 auto;
     display: flex;
     flex-wrap: nowrap;
+    cursor: pointer;
+}
+
+.c-content-table-item:hover,
+.c-content-table-item:focus {
+    background-color: #e1f5ff;
 }
 
 .c-content-table-item__name,
@@ -29,6 +35,7 @@
 
 .c-content-table-item__actions {
     flex: 0 0 90px;
+    position: relative;
 }
 
 .c-content-table-item__btn--preview {
@@ -54,4 +61,11 @@
 .c-content-table-item__btn--preview:hover .ez-icon,
 .c-content-table-item__btn--preview:focus .ez-icon {
     fill: #565e63;
+}
+
+.c-content-table-item .c-select-content-button {
+    position: absolute;
+    right: 1.3rem;
+    top: 50%;
+    transform: translateY(-50%);
 }
