EZP-29481: Improved styling of UDW Search & Bookmarks content panels

--- a/src/modules/universal-discovery/components/content-table/css/content.table.header.component.css
+++ b/src/modules/universal-discovery/components/content-table/css/content.table.header.component.css
@@ -8,6 +8,7 @@
     font-weight: 700;
     font-size: 15px;
     line-height: 20px;
+    background-color: #fff;
 }
 
 .c-content-table-header__list-header--name {
