--- a/src/modules/universal-discovery/components/tab-content/css/bookmarks.panel.component.css
+++ b/src/modules/universal-discovery/components/tab-content/css/bookmarks.panel.component.css
@@ -1,5 +1,5 @@
 .c-bookmarks-panel {
-    background: #fff;
+    background: #e5e3e3;
     height: 100%;
     padding: 16px;
     border-radius: 4px;
