--- a/src/modules/universal-discovery/components/selected-content/css/selected.content.component.css
+++ b/src/modules/universal-discovery/components/selected-content/css/selected.content.component.css
@@ -28,7 +28,7 @@
     line-height: 15px;
 }
 
-.c-selected-content .c-popup {
+.c-selected-content .c-tooltip-popup {
     position: absolute;
     z-index: 2;
     top: 0;
@@ -37,7 +37,7 @@
     border-radius: 6px;
 }
 
-.c-selected-content .c-popup:after {
+.c-selected-content .c-tooltip-popup:after {
     position: absolute;
     bottom: 0;
     left: 16px;
