--- a/src/modules/sub-items/components/bulk-delete/css/bulk.delete.btn.css
+++ b/src/modules/sub-items/components/bulk-delete/css/bulk.delete.btn.css
@@ -6,3 +6,8 @@
 .c-bulk-delete-btn__modal-body {
     padding: 0 2rem;
 }
+
+.c-bulk-delete-btn__cancel-btn {
+    background-color: #646464;
+    border-color: #646464;
+}
