--- a/src/modules/common/tooltip-popup/css/tooltip.popup.component.css
+++ b/src/modules/common/tooltip-popup/css/tooltip.popup.component.css
@@ -1,7 +1,7 @@
 .c-tooltip-popup {
     background: #ededed;
     padding: 16px;
-    box-shadow: 0 0 30px 0 rgba(0,0,0,.35);
+    box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.35);
     position: relative;
     border-radius: 4px;
 }
@@ -30,8 +30,8 @@
     width: 24px;
     height: 24px;
     fill: #333;
-    opacity: .5;
-    transition: opacity .3s cubic-bezier(.25, .8, .25, 1);
+    opacity: 0.5;
+    transition: opacity 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
 .c-tooltip-popup__close .ez-icon:hover {
