--- a/src/modules/sub-items/css/sub.items.module.css
+++ b/src/modules/sub-items/css/sub.items.module.css
@@ -80,3 +80,13 @@
     cursor: not-allowed;
     opacity: 0.3;
 }
+
+.m-sub-items__btn--move {
+    border: 1px solid #106d95;
+    background-color: #106d95;
+}
+
+.m-sub-items__btn--trash {
+    border: 1px solid #d92d42;
+    background-color: #d92d42;
+}
