--- a/src/modules/multi-file-upload/css/multi.file.upload.module.css
+++ b/src/modules/multi-file-upload/css/multi.file.upload.module.css
@@ -12,13 +12,13 @@
     border-radius: 4px;
     text-align: center;
     cursor: pointer;
-    letter-spacing: .5px;
+    letter-spacing: 0.5px;
     color: #fff;
     font-size: 14px;
     font-weight: bold;
     border: 1px solid #f15a10;
     background-color: #f15a10;
-    transition: background .3s ease-in-out;
+    transition: background 0.3s ease-in-out;
     align-items: center;
     height: 40px;
     width: 40px;
@@ -28,6 +28,15 @@
 .m-mfu__btn--upload:hover,
 .m-mfu__btn--upload:focus {
     background: #c3480b;
+}
+
+.m-mfu__btn--upload[disabled],
+.m-mfu__btn--upload[disabled]:hover,
+.m-mfu__btn--upload[disabled]:focus {
+    border: 1px solid #f15a10;
+    background-color: #f15a10;
+    cursor: not-allowed;
+    opacity: 0.3;
 }
 
 .m-mfu__btn--upload .ez-icon {
