Small rewrite of the pagination - now each time the page is changed it is reloaded

--- a/src/modules/sub-items/components/pagination-info/css/pagination.info.component.css
+++ b/src/modules/sub-items/components/pagination-info/css/pagination.info.component.css
@@ -1,8 +1,8 @@
-.c-viewing-message {
+.c-pagination-info {
     text-align: center;
 }
 
-.c-viewing-message__text {
+.c-pagination-info__text {
     padding: 16px 0;
     font-size: 12px;
 }
