--- a/src/modules/sub-items/css/sub.items.module.css
+++ b/src/modules/sub-items/css/sub.items.module.css
@@ -44,7 +44,7 @@
     position: relative;
 }
 
-.m-sub-items__list--loading:after {
+.m-sub-items__list--processing:after {
     content: '';
     position: absolute;
     z-index: 999;
@@ -55,6 +55,20 @@
     bottom: 0;
 }
 
+.m-sub-items__spinner-wrapper {
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+}
+
+.m-sub-items__spinner {
+    display: block;
+    width: 50px;
+    height: 50px;
+    margin: 20px;
+}
+
 .m-sub-items__confirmation-modal-body {
     padding: 0 2rem;
 }
@@ -62,4 +76,10 @@
 .m-sub-items__confirmation-modal-cancel-btn {
     background-color: #646464;
     border-color: #646464;
+}
+
+.m-sub-items__pagination-info {
+    text-align: center;
+    padding: 16px 0;
+    font-size: 12px;
 }
