--- a/Resources/public/scss/ezplatform-modules.scss
+++ b/Resources/public/scss/ezplatform-modules.scss
@@ -2,3 +2,4 @@
 @import 'bundles/ezplatformadminui/scss/functions/calculate.rem';
 @import 'bundles/ezplatformadminui/scss/mixins';
 @import 'modules/multi.file.upload';
+@import 'modules/sub.items.list';
