EZP-29996: Move CSS files for Universal Discovery Module to Admin UI

--- a/Resources/public/scss/ezplatform-modules.scss
+++ b/Resources/public/scss/ezplatform-modules.scss
@@ -1,5 +1,7 @@
 @import 'bundles/ezplatformadminui/scss/custom';
 @import 'bundles/ezplatformadminui/scss/functions/calculate.rem';
 @import 'bundles/ezplatformadminui/scss/mixins';
+@import 'modules/common';
 @import 'modules/multi.file.upload';
 @import 'modules/sub.items.list';
+@import 'modules/universal.discovery';
