--- a/Resources/public/scss/modules/sub-items-list/_no.items.scss
+++ b/Resources/public/scss/modules/sub-items-list/_no.items.scss
@@ -1,5 +1,6 @@
 .c-no-items {
     padding: 0 calculateRem(32px);
     font-style: italic;
-    color: $ez-color-base-light;
+    font-size: calculateRem(14px);
+    color: $ez-color-base-dark;
 }
