--- a/Resources/public/scss/modules/universal-discovery/_content.table.header.scss
+++ b/Resources/public/scss/modules/universal-discovery/_content.table.header.scss
@@ -7,7 +7,7 @@
 
     &__list-header {
         padding: calculateRem(8px) calculateRem(16px);
-        font-weight: normal;
+        font-weight: 700;
         font-size: calculateRem(15px);
         line-height: calculateRem(20px);
 
