--- a/Resources/public/scss/ezplatform-modules.scss
+++ b/Resources/public/scss/ezplatform-modules.scss
@@ -4,4 +4,5 @@
 @import 'modules/common';
 @import 'modules/multi.file.upload';
 @import 'modules/sub.items.list';
+@import 'modules/content.tree';
 @import 'modules/universal.discovery';
